--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,3 +1,7 @@
+@import 'react-toastify/dist/ReactToastify.css';
+@import '~react-toastify/scss/main';
+@import './custom.scss';
+
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
