--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,6 +1,8 @@
+@import './custom.scss';
 @import 'react-toastify/dist/ReactToastify.css';
 @import '~react-toastify/scss/main';
-@import './custom.scss';
+@import 'ag-grid-community/dist/styles/ag-grid.css';
+@import 'ag-grid-community/dist/styles/ag-theme-alpine-dark.css';
 
 body {
     margin: 0;
