add helmets to every page and add interaction plugin to calendar

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -1,3 +1,16 @@
 li {
     list-style-type: none;
 }
+
+a:hover {
+    cursor: pointer;
+}
+
+.main-menu {
+    display: flex;
+    justify-content: center;
+
+    li {
+        padding: 5px;
+    }
+}
