--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -2,6 +2,10 @@ li {
     list-style-type: none;
 }
 
+p {
+    margin-bottom: 0;
+}
+
 a:hover {
     cursor: pointer;
 }
@@ -12,5 +16,16 @@ a:hover {
 
     li {
         padding: 5px;
+    }
+}
+
+.test-buttons {
+    display: flex;
+    flex-direction: column;
+
+    .fetch-button {
+        width: 150px;
+        margin-bottom: 5px;
+        align-self: center;
     }
 }
