add simple form validation

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -26,6 +26,6 @@ a:hover {
     .fetch-button {
         width: 150px;
         margin-bottom: 5px;
-        align-self: center;
+        // align-self: center;
     }
 }
